--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: 
       context: ./
       dockerfile: docker/node/Dockerfile
+    env_file: ./.env
     depends_on:
       - mysql
     volumes:
@@ -12,6 +13,8 @@ services:
       - node_modules:/app/node_modules
     ports:
       - 8080:8080
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
   mysql:
     image: mysql:8.0.31
     environment:
